--- a/index.html
+++ b/index.html
@@ -1,339 +1,35 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>米團購訂單表單</title>
-    <!-- 引入 Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'], // 使用 Inter 字體
-                    },
-                }
-            }
-        }
-    </script>
-    <!-- 引入 Supabase JavaScript 客戶端函式庫 -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.43.0/dist/umd/supabase.min.js"></script>
+  <meta charset="UTF-8">
+  <title>團購米訂購表單</title>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4 font-sans">
-    <div class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md border border-gray-200">
-        <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">米團購訂單表單</h1>
-
-        <!-- 姓名輸入區塊 -->
-        <div class="mb-5">
-            <label for="customerName" class="block text-gray-700 text-sm font-medium mb-2">您的姓名:</label>
-            <input type="text" id="customerName" placeholder="請輸入您的姓名" required
-                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out shadow-sm">
-        </div>
-
-        <!-- 手機號碼輸入區塊 -->
-        <div class="mb-5">
-            <label for="phoneNumber" class="block text-gray-700 text-sm font-medium mb-2">手機號碼:</label>
-            <input type="tel" id="phoneNumber" placeholder="請輸入您的手機號碼" required
-                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out shadow-sm">
-        </div>
-
-        <!-- 地址輸入區塊 -->
-        <div class="mb-5">
-            <label for="address" class="block text-gray-700 text-sm font-medium mb-2">地址:</label>
-            <input type="text" id="address" placeholder="請輸入您的地址" required
-                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out shadow-sm">
-        </div>
-
-        <!-- 米品數量選擇區塊 -->
-        <div id="riceQuantitiesContainer" class="mb-6 border p-4 rounded-lg bg-gray-50">
-            <h2 class="text-lg font-semibold text-gray-700 mb-3">訂購米品數量:</h2>
-
-            <!-- 糙米數量 -->
-            <div class="flex flex-col sm:flex-row sm:items-center gap-3 mb-4 p-3 border border-gray-200 rounded-lg bg-white shadow-sm">
-                <div class="flex-1">
-                    <label class="block text-gray-700 text-sm font-medium mb-1">糙米數量 (公斤):</label>
-                    <input type="number" id="quantityCaiMi" class="quantity-input w-full px-3 py-1.5 border border-gray-300 rounded-md focus:ring-blue-400 focus:border-blue-400 text-sm" min="0" max="20" value="0">
-                </div>
-            </div>
-
-            <!-- 白米數量 -->
-            <div class="flex flex-col sm:flex-row sm:items-center gap-3 mb-4 p-3 border border-gray-200 rounded-lg bg-white shadow-sm">
-                <div class="flex-1">
-                    <label class="block text-gray-700 text-sm font-medium mb-1">白米數量 (公斤):</label>
-                    <input type="number" id="quantityBaiMi" class="quantity-input w-full px-3 py-1.5 border border-gray-300 rounded-md focus:ring-blue-400 focus:border-blue-400 text-sm" min="0" max="20" value="0">
-                </div>
-            </div>
-            <p class="text-sm text-gray-600 mt-2">提示：若訂購總數包含任一 20 公斤箱裝，運費將自動免除。</p>
-        </div>
-
-        <!-- 運費顯示區塊 -->
-        <div id="shippingCostDisplay" class="text-lg font-semibold text-gray-700 text-center mb-4 p-2 bg-gray-50 rounded-lg border border-gray-200">
-            運費: $0.00
-        </div>
-
-        <!-- 總金額顯示區塊 -->
-        <div id="totalPrice" class="text-3xl font-extrabold text-blue-700 text-center mb-6 p-4 bg-blue-50 rounded-lg border border-blue-200">
-            總金額: $0.00
-        </div>
-
-        <!-- 提交訂單按鈕 -->
-        <button id="submitOrderBtn"
-                class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition duration-300 ease-in-out transform active:scale-95 text-lg font-semibold shadow-md">
-            提交訂單
-        </button>
-
-        <!-- 訊息顯示區塊 -->
-        <div id="messageDisplay" class="mt-5 p-3 rounded-lg text-center font-medium hidden whitespace-pre-wrap"></div>
-    </div>
-
-    <script>
-        // --- Supabase 配置 ---
-        // 請將這裡替換為你的 Supabase URL 和 Anon Key
-        const SUPABASE_URL = "YOUR_SUPABASE_URL"; // 替換為你的 Supabase URL
-        const SUPABASE_KEY = "YOUR_SUPABASE_KEY"; // 替換為你的 Supabase Anon Key
-        const supabase = Supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-        // --- 商品資訊 ---
-        const PRICE_PER_KG = 150;
-        const SHIPPING_COST_BASE = 150; // 基本運費
-        const BOX_QUANTITY = 20; // 箱裝公斤數
-        const BOX_PRICE = PRICE_PER_KG * BOX_QUANTITY; // 箱裝價格
-
-        // --- DOM 元素獲取 ---
-        const customerNameInput = document.getElementById('customerName');
-        const phoneNumberInput = document.getElementById('phoneNumber');
-        const addressInput = document.getElementById('address');
-        const quantityCaiMiInput = document.getElementById('quantityCaiMi'); // 糙米數量輸入框
-        const quantityBaiMiInput = document.getElementById('quantityBaiMi'); // 白米數量輸入框
-        const shippingCostDisplay = document.getElementById('shippingCostDisplay');
-        const totalPriceDisplay = document.getElementById('totalPrice');
-        const submitOrderBtn = document.getElementById('submitOrderBtn');
-        const messageDisplay = document.getElementById('messageDisplay');
-
-        // --- 函式：強制數量限制 (確保輸入值在 min/max 範圍內) ---
-        function enforceQuantityLimits(event) {
-            let input = event.target;
-            let value = parseInt(input.value);
-            let min = parseInt(input.min);
-            let max = parseInt(input.max);
-
-            if (isNaN(value) || value < min) {
-                input.value = min;
-            } else if (value > max) {
-                input.value = max;
-            }
-            calculateTotalPrice(); // 重新計算以反映修正後的值
-        }
-
-        // --- 函式：計算總金額和運費 ---
-        function calculateTotalPrice() {
-            console.log("診斷：calculateTotalPrice 函式被呼叫。");
-            let subtotal = 0;
-            let hasBoxQuantity = false;
-            const orderedItems = [];
-
-            // 處理糙米數量
-            let quantityCaiMi = parseInt(quantityCaiMiInput.value);
-            if (isNaN(quantityCaiMi) || quantityCaiMi < 0) { // 允許為0
-                quantityCaiMi = 0;
-                quantityCaiMiInput.value = 0;
-            } else if (quantityCaiMi > 20) {
-                quantityCaiMi = 20;
-                quantityCaiMiInput.value = 20;
-            }
-            if (quantityCaiMi > 0) {
-                if (quantityCaiMi === BOX_QUANTITY) {
-                    subtotal += BOX_PRICE;
-                    hasBoxQuantity = true;
-                } else {
-                    subtotal += quantityCaiMi * PRICE_PER_KG;
-                }
-                orderedItems.push({ rice_type: '糙米', quantity: quantityCaiMi });
-            }
-            console.log(`診斷：糙米數量: ${quantityCaiMi} 公斤`);
-
-            // 處理白米數量
-            let quantityBaiMi = parseInt(quantityBaiMiInput.value);
-            if (isNaN(quantityBaiMi) || quantityBaiMi < 0) { // 允許為0
-                quantityBaiMi = 0;
-                quantityBaiMiInput.value = 0;
-            } else if (quantityBaiMi > 20) {
-                quantityBaiMi = 20;
-                quantityBaiMiInput.value = 20;
-            }
-            if (quantityBaiMi > 0) {
-                if (quantityBaiMi === BOX_QUANTITY) {
-                    subtotal += BOX_PRICE;
-                    hasBoxQuantity = true;
-                } else {
-                    subtotal += quantityBaiMi * PRICE_PER_KG;
-                }
-                orderedItems.push({ rice_type: '白米', quantity: quantityBaiMi });
-            }
-            console.log(`診斷：白米數量: ${quantityBaiMi} 公斤`);
-
-            let currentShippingCost = SHIPPING_COST_BASE;
-            if (hasBoxQuantity) {
-                currentShippingCost = 0; // 訂購箱裝米則免運
-            }
-
-            const finalTotalPrice = subtotal + currentShippingCost;
-
-            shippingCostDisplay.textContent = `運費: $${currentShippingCost.toFixed(2)}`;
-            totalPriceDisplay.textContent = `總金額: $${finalTotalPrice.toFixed(2)}`;
-            console.log(`診斷：小計: $${subtotal.toFixed(2)}, 運費: $${currentShippingCost.toFixed(2)}, 總金額: $${finalTotalPrice.toFixed(2)}`);
-            return { finalTotalPrice, currentShippingCost, orderedItems };
-        }
-
-        // --- 函式：顯示訊息 (成功/錯誤/載入中) ---
-        function showMessage(msg, type) {
-            messageDisplay.textContent = msg;
-            messageDisplay.classList.remove('hidden', 'bg-green-100', 'text-green-800', 'bg-red-100', 'text-red-800', 'bg-gray-100', 'text-gray-700');
-            if (type === 'success') {
-                messageDisplay.classList.add('bg-green-100', 'text-green-800');
-            } else if (type === 'error') {
-                messageDisplay.classList.add('bg-red-100', 'text-red-800');
-            } else if (type === 'loading') {
-                messageDisplay.classList.add('bg-gray-100', 'text-gray-700');
-            }
-            messageDisplay.style.display = 'block';
-        }
-
-        // --- 函式：呼叫 Gemini API 生成訂單摘要 ---
-        async function generateOrderSummaryWithLLM(customerName, orderedItems, shippingCost, totalPrice) {
-            showMessage('✨ 正在生成個性化訂單確認訊息...', 'loading');
-
-            const itemDetailsString = orderedItems.map(item => `${item.rice_type}: ${item.quantity} 公斤`).join(', ');
-
-            const prompt = `請為以下米團購訂單生成一個友善且個性化的訂單確認訊息。內容應包含客戶姓名、訂購明細、運費和總金額。請使用溫暖的語氣，並提及感謝訂購。不要包含任何 Markdown 格式（例如粗體、列表符號），只提供純文字。
-
-訂單詳情：
-姓名: ${customerName}
-訂購明細: ${itemDetailsString}
-運費: $${shippingCost.toFixed(2)}
-總金額: $${totalPrice.toFixed(2)}`;
-
-            let chatHistory = [];
-            chatHistory.push({ role: "user", parts: [{ text: prompt }] });
-            const payload = { contents: chatHistory };
-            const apiKey = "";
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
-
-            try {
-                const response = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(payload)
-                });
-                const result = await response.json();
-
-                if (result.candidates && result.candidates.length > 0 &&
-                    result.candidates[0].content && result.candidates[0].content.parts &&
-                    result.candidates[0].content.parts.length > 0) {
-                    const text = result.candidates[0].content.parts[0].text;
-                    showMessage(`✨ ${text}`, "success");
-                } else {
-                    console.error('診斷：Gemini API 返回了意外的結構或沒有內容:', result);
-                    showMessage("訂單提交成功，但無法生成個性化確認訊息。請稍後再試。", "error");
-                }
-            } catch (error) {
-                console.error('診斷：呼叫 Gemini API 失敗:', error);
-                showMessage("訂單提交成功，但生成個性化確認訊息時發生錯誤。請檢查網路連接。", "error");
-            }
-        }
-
-        // --- 函式：提交訂單到 Supabase ---
-        async function submitOrder() {
-            try {
-                const customerName = customerNameInput.value.trim();
-                const phoneNumber = phoneNumberInput.value.trim();
-                const address = addressInput.value.trim();
-
-                if (!customerName) {
-                    showMessage("請輸入您的姓名。", "error");
-                    return;
-                }
-                if (!phoneNumber) {
-                    showMessage("請輸入您的手機號碼。", "error");
-                    return;
-                }
-                if (!address) {
-                    showMessage("請輸入您的地址。", "error");
-                    return;
-                }
-
-                const { finalTotalPrice, currentShippingCost, orderedItems } = calculateTotalPrice();
-
-                // 檢查是否有訂購任何米品
-                if (orderedItems.length === 0) {
-                    showMessage("請至少訂購一種米品。", "error"); // 修正提示訊息
-                    return;
-                }
-
-                submitOrderBtn.disabled = true;
-                submitOrderBtn.textContent = '提交中...';
-                submitOrderBtn.classList.add('opacity-50', 'cursor-not-allowed');
-
-                const { data, error } = await supabase
-                    .from('orders')
-                    .insert([
-                        {
-                            customer_name: customerName,
-                            phone_number: phoneNumber,
-                            address: address,
-                            items_details: orderedItems,
-                            shipping_cost: currentShippingCost,
-                            total_price: finalTotalPrice
-                        }
-                    ]);
-
-                if (error) {
-                    console.error('診斷：提交訂單錯誤:', error);
-                    showMessage(`訂單提交失敗: ${error.message}`, "error");
-                } else {
-                    console.log('診斷：訂單已成功提交到 Supabase:', data);
-                    await generateOrderSummaryWithLLM(customerName, orderedItems, currentShippingCost, finalTotalPrice);
-
-                    // 清空表單並重設為預設狀態
-                    customerNameInput.value = '';
-                    phoneNumberInput.value = '';
-                    addressInput.value = '';
-                    quantityCaiMiInput.value = '0'; // 重設為 0
-                    quantityBaiMiInput.value = '0'; // 重設為 0
-                    calculateTotalPrice(); // 更新總金額顯示
-                }
-            } catch (err) {
-                console.error('診斷：捕獲到提交訂單時的錯誤:', err);
-                showMessage(`提交訂單時發生未知錯誤: ${err.message}`, "error");
-            } finally {
-                submitOrderBtn.disabled = false;
-                submitOrderBtn.textContent = '提交訂單';
-                submitOrderBtn.classList.remove('opacity-50', 'cursor-not-allowed');
-            }
-        }
-
-        // --- 頁面載入完成後執行 ---
-        document.addEventListener('DOMContentLoaded', () => {
-            try {
-                // 為糙米和白米數量輸入框綁定事件
-                quantityCaiMiInput.addEventListener('input', calculateTotalPrice);
-                quantityCaiMiInput.addEventListener('change', enforceQuantityLimits);
-                quantityBaiMiInput.addEventListener('input', calculateTotalPrice);
-                quantityBaiMiInput.addEventListener('change', enforceQuantityLimits);
-
-                // 初始計算一次總金額
-                calculateTotalPrice();
-
-                // 提交按鈕點擊事件
-                submitOrderBtn.addEventListener('click', submitOrder);
-                console.log("診斷：所有事件監聽器已綁定。");
-
-            } catch (e) {
-                console.error("診斷：DOMContentLoaded 階段發生錯誤:", e);
-            }
-        });
-    </script>
+<body>
+  <h2>團購米訂購表單</h2>
+  {% if message %}<p style="color: green">{{ message }}</p>{% endif %}
+  <form method="post" action="/submit">
+    <label>姓名：<input type="text" name="name" required></label><br>
+    <label>米種：
+      <select name="type">
+        <option value="white">白米</option>
+        <option value="brown">糙米</option>
+      </select>
+    </label><br>
+    <label>數量(公斤)：
+      <select name="quantity" id="quantity">
+        {% for i in range(1, 21) %}<option value="{{ i }}">{{ i }}</option>{% endfor %}
+      </select>
+    </label><br>
+    <p>每公斤150元，總金額：<span id="total">150</span> 元</p>
+    <button type="submit">送出</button>
+  </form>
+  <script>
+    const quantity = document.getElementById("quantity");
+    const total = document.getElementById("total");
+    quantity.addEventListener("change", () => {
+      total.textContent = parseInt(quantity.value) * 150;
+    });
+  </script>
+  <p><a href="/admin">查看後台訂單管理</a></p>
 </body>
 </html>
-
