--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
         total: calculateTotal()
       };
 
+fetch("https://rice-order-proxy.roger-c16.workers.dev", {
+  method: "POST",
+  body: JSON.stringify(data)
+})
 
-fetch("https://script.google.com/macros/s/AKfycbx_l_Ep5vNXOLFQeCvEmWnQmxb197odQCqOyVRegs1ZqCoWuEotTRgbUqtd--Ngr3qb6A/exec", {
+fetch("https://rice-order-proxy.你的子網域.workers.dev", {
         method: "POST",
         body: JSON.stringify(data)
       })
