--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         total: calculateTotal()
       };
 
-fetch("https://rice-order-proxy.roger-c16.workers.dev", {
+fetch("https://floral-sun-acc2.roger-c16.workers.dev", {
   method: "POST",
   body: JSON.stringify(data)
 })
