--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-當然！我幫你把之前用 `document.write()` 動態產生 `<option>` 的部分改成用 DOM API，且包在 `DOMContentLoaded` 事件裡，符合 CSP 不使用 `eval` 也不會觸發限制。
-
----
-
-# 修正後完整 HTML 範例
-
-```html
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
@@ -20,7 +13,7 @@
 </head>
 <body>
   <h2>米訂購表單</h2>
-  <form id="orderForm">
+  <form id="orderForm" novalidate>
     <label>姓名：
       <input type="text" name="name" required />
     </label>
@@ -57,15 +50,16 @@
       const totalAmount = document.getElementById('totalAmount');
       const form = document.getElementById('orderForm');
 
-      // 動態產生 1~20 的選項
+      // 用純 DOM API 動態建立 1~20 的選項
       function populateOptions(selectElement) {
-        for (let i = 1; i <= 20; i++) {
-          const option = document.createElement('option');
+        for(let i=1; i<=20; i++) {
+          const option = document.createElement("option");
           option.value = i;
           option.textContent = i;
           selectElement.appendChild(option);
         }
       }
+
       populateOptions(brownSelect);
       populateOptions(whiteSelect);
 
@@ -73,55 +67,52 @@
         const brownQty = parseInt(brownSelect.value) || 0;
         const whiteQty = parseInt(whiteSelect.value) || 0;
         const totalKg = brownQty + whiteQty;
-        const ricePrice = 150;
+        const pricePerKg = 150;
         const shipping = totalKg >= 10 ? 0 : 150;
-        const total = (totalKg * ricePrice) + shipping;
+        const total = (totalKg * pricePerKg) + shipping;
         totalAmount.textContent = total;
         return total;
       }
 
       brownSelect.addEventListener("change", calculateTotal);
       whiteSelect.addEventListener("change", calculateTotal);
+
       calculateTotal();
 
-      form.addEventListener("submit", function (e) {
+      form.addEventListener("submit", async (e) => {
         e.preventDefault();
 
         const data = {
-          name: form.name.value,
-          phone: form.phone.value,
-          email: form.email.value,
+          name: form.name.value.trim(),
+          phone: form.phone.value.trim(),
+          email: form.email.value.trim(),
           brownRice: Number(brownSelect.value),
           whiteRice: Number(whiteSelect.value),
           total: calculateTotal()
         };
 
-        fetch("https://floral-sun-acc2.roger-c16.workers.dev", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(data)
-        })
-        .then(res => res.text())
-        .then(response => {
+        try {
+          const response = await fetch("https://floral-sun-acc2.roger-c16.workers.dev", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify(data)
+          });
+
+          if (!response.ok) {
+            throw new Error(`伺服器錯誤，狀態碼: ${response.status}`);
+          }
+
+          const text = await response.text();
           alert("✅ 訂單已送出，謝謝您的訂購！");
           form.reset();
           calculateTotal();
-        })
-        .catch(error => {
-          alert("❌ 送出失敗，請稍後再試。\n" + error);
-        });
+        } catch (error) {
+          alert("❌ 送出失敗，請稍後再試。\n" + error.message);
+        }
       });
     });
   </script>
 </body>
 </html>
-```
-
----
-
-這樣改完就符合 CSP，不會觸發禁止 `eval` 或 `document.write` 的錯誤。
-你直接用這版放上網頁就能正常執行囉！
-
-如果要，我還能幫你檢查 Cloudflare Worker 跟 Google Apps Script 部分，確保整套系統無縫連接。
