--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>米訂購表單</title>
+  <title>米訂購表單 (CSP 友善版)</title>
   <style>
     body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; }
     label { display: block; margin-top: 12px; }
@@ -44,43 +44,45 @@
   </form>
 
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
+    // 等 DOM 內容載入完成再執行
+    document.addEventListener("DOMContentLoaded", function() {
       const brownSelect = document.getElementById('brownRice');
       const whiteSelect = document.getElementById('whiteRice');
       const totalAmount = document.getElementById('totalAmount');
       const form = document.getElementById('orderForm');
 
-      // 用純 DOM API 動態建立 1~20 的選項
+      // 用純 DOM API 動態產生選項（1~20）
       function populateOptions(selectElement) {
-        for(let i=1; i<=20; i++) {
-          const option = document.createElement("option");
+        for (let i = 1; i <= 20; i++) {
+          const option = document.createElement('option');
           option.value = i;
           option.textContent = i;
           selectElement.appendChild(option);
         }
       }
-
       populateOptions(brownSelect);
       populateOptions(whiteSelect);
 
+      // 計算總價
       function calculateTotal() {
-        const brownQty = parseInt(brownSelect.value) || 0;
-        const whiteQty = parseInt(whiteSelect.value) || 0;
+        const brownQty = parseInt(brownSelect.value, 10) || 0;
+        const whiteQty = parseInt(whiteSelect.value, 10) || 0;
         const totalKg = brownQty + whiteQty;
         const pricePerKg = 150;
         const shipping = totalKg >= 10 ? 0 : 150;
-        const total = (totalKg * pricePerKg) + shipping;
+        const total = totalKg * pricePerKg + shipping;
         totalAmount.textContent = total;
         return total;
       }
 
-      brownSelect.addEventListener("change", calculateTotal);
-      whiteSelect.addEventListener("change", calculateTotal);
+      brownSelect.addEventListener('change', calculateTotal);
+      whiteSelect.addEventListener('change', calculateTotal);
 
-      calculateTotal();
+      calculateTotal(); // 初始化金額
 
-      form.addEventListener("submit", async (e) => {
-        e.preventDefault();
+      // 表單送出事件
+      form.addEventListener('submit', function(event) {
+        event.preventDefault();
 
         const data = {
           name: form.name.value.trim(),
@@ -91,26 +93,22 @@
           total: calculateTotal()
         };
 
-        try {
-          const response = await fetch("https://floral-sun-acc2.roger-c16.workers.dev", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json"
-            },
-            body: JSON.stringify(data)
-          });
-
-          if (!response.ok) {
-            throw new Error(`伺服器錯誤，狀態碼: ${response.status}`);
-          }
-
-          const text = await response.text();
+        fetch("https://floral-sun-acc2.roger-c16.workers.dev", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data)
+        }).then(response => {
+          if (!response.ok) throw new Error('伺服器回應錯誤');
+          return response.text();
+        }).then(() => {
           alert("✅ 訂單已送出，謝謝您的訂購！");
           form.reset();
           calculateTotal();
-        } catch (error) {
+        }).catch(error => {
           alert("❌ 送出失敗，請稍後再試。\n" + error.message);
-        }
+        });
       });
     });
   </script>
